<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Address Book</string>
  <string name="no_contacts">No Contacts Yet</string>
  <string name="menu_insert">Add Contact</string>
  <string name="menu_delete">Delete Contact</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="name_delim">, </string>
  <string name="phone">Phone</string>
  <string name="email">Email</string>
  <string name="confirm">Confirm</string>
  <string name="edit_contact">Edit Contact</string>
  <string name="pref_sortByTitle">Sort contacts by</string>
  <string name="pref_sort_by_last">last name</string>
  <string name="pref_sort_by_first">first name</string>
  <string name="pref_sortBy_default">0</string>
  <string name="pref_menuTitle">Preferences</string>
  <string name="err_first_name">First name is required.</string>
  <string name="err_last_name">Last name is required.</string>
</resources>